--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,5 +1,6 @@
 #root {
-  max-width: 1280px;
+  max-width: 1836px;
+  min-width: 900px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -11,9 +12,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
