--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -16,3 +16,19 @@
 .wrapper:active {
   filter: brightness(50%);
 }
+
+.flipping {
+  animation: flip-animation 1s infinite;
+}
+
+@keyframes flip-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
